--- a/templates/module/cta_group.twig
+++ b/templates/module/cta_group.twig
@@ -10,31 +10,31 @@
         {% endif %}
 
         <div class="row">
-            <div class="col">
-                <div class="card-deck">
-                    {% for cta in module.cta_group %}
-                    <div class="card">
-                        {% if cta.image %}
-                        <img src="{{TimberImage(cta.image).src|resize(540,300)}}" class="card-image-top cta-image">
-                        {% endif %}
+        
+            {% for cta in module.cta_group %}
+                
+                <div class="col-md-6 col-lg-3 cta">
+                
+                    {% if cta.image %}
+                        <img src="{{TimberImage(cta.image).src|resize(1000,555)}}" class="card-image-top cta-image mw-100">
+                    {% endif %}
 
-                        <div class="card-body">
+                    <div class="row no-gutters cta-content">
+                        <div class="col-10 offset-1">
                             {% if cta.heading %}
-                            <h3 class="card-title h5">{{cta.heading}}</h3>
+                                <h3>{{cta.heading}}</h3>
                             {% endif %}
-
-                            {% if cta.copy %}
-                            <p class="card-text">{{cta.copy}}</p>
-                            {% endif %}
-
+                        
                             {% if cta.link %}
-                            <a class="btn btn-secondary" href="{{cta.link.url}}" target="{{cta.link.target}}">{{cta.link.title}}</a>
+                                <a class="special special-right" href="{{cta.link.url}}" target="{{cta.link.target}}">{{cta.link.title}}</a>
                             {% endif %}
                         </div>
-                    </div>
-                    {% endfor %}
+                    </div>  
+
             </div>
+
+            {% endfor %}
+            
         </div>
-        
-    </div>
+</div>
 </div>
