--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -688,6 +688,10 @@ h2.post-title {
     margin-bottom: 20px;
 }
 @media (min-width: 768px) {
+    .cta-pair .cta {
+        margin-bottom: 0 !important;
+    }
+    
     .cta-pair .cta-content {
         margin-top: -60px;
     }
@@ -698,6 +702,56 @@ h2.post-title {
 
     .cta-pair p {
         font-size: 1.125rem;
+    }
+}
+
+/*
+* — MODULE - CTA - Group —
+*/
+
+.cta-group {
+    background-color: $asc_lightest_gray;
+    padding: 40px 0;
+}
+.cta-group h2 {
+    border-left-color: $tertiary;
+}
+.cta-group .cta {
+    margin-bottom: 30px;
+}
+.cta-group .cta:last-child {
+    margin-bottom: 0;
+}
+.cta-group .cta-content {
+    margin-top: -15px;
+    text-align: center;
+}
+.cta-group .cta-content div {
+    background-color: $white;
+    padding: 15px !important;
+}
+.cta-group h3 {
+    font-size: 1.3rem;
+    font-weight: bold;
+    line-height: 1.1;
+    margin-bottom: 25px;
+}
+
+@media (min-width: 768px) {
+    .cta-group .cta {
+        margin-bottom: 70px;
+    }
+    .cta-group .cta:nth-last-child(2) {
+        margin-bottom: 0;
+    }
+    .cta-group h3 {
+        font-size: 2rem;
+    }
+}
+
+@media (min-width: 992px) {
+    .cta-group .cta:nth-last-child(4) {
+        margin-bottom: 0;
     }
 }
 
