Overview module - phone

--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -40,6 +40,7 @@ body {
     margin: 0;
 }
 
+/*
 .header-menu-secondary ul:after {
     position: absolute;
     top: 0;
@@ -49,6 +50,7 @@ body {
     height: 100%;
     width: 5000px;
 }
+*/
 
 .header-menu-secondary li {
     color: $white;
@@ -928,6 +930,49 @@ h2.post-title {
         margin-bottom: 0;
     }
 }
+
+/*
+* — MODULE - Overview —
+*/
+
+.overview h1 {
+    font-size: 1.7rem;
+    line-height: 1.1;
+    margin-bottom: 10px;
+}
+
+.overview-primary {
+    margin-bottom: 30px;
+}
+
+.overview-primary .buttons {
+    margin-top: 15px;
+}
+
+.overview-primary p {
+    margin-bottom: 0;
+}
+
+.overview-secondary h3 {
+    border-bottom: 1px solid $secondary;
+    font-size: 1.125rem;
+    line-height: 1.2;
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+}
+
+.overview-secondary p {
+    margin-bottom: 15px;
+}
+
+.overview-secondary p:last-of-type {
+    margin-bottom: 0;
+}
+
+
+/*
+* — MODULE - Overview - About —
+*/
 
 /*
 * — MODULE - Schools —
