--- a/templates/partial/buttons.twig
+++ b/templates/partial/buttons.twig
@@ -1,5 +1,5 @@
-<ul class="list-inline">
+<ul class="buttons">
     {% for button in buttons %}
-    <li class="list-inline-item"><a class="btn btn-primary" href="{{button.link.url}}" target="{{button.link.target}}">{{button.link.title}}</a></li>
+    <li><a class="btn btn-primary" href="{{button.link.url}}" target="{{button.link.target}}">{{button.link.title}}</a></li>
     {% endfor %}
 </ul>
