--- a/src/scss/_bootstrap.scss
+++ b/src/scss/_bootstrap.scss
@@ -18,7 +18,7 @@ $asc_lightest_gray: #F3F3F3;
 $primary: $asc_red;
 $secondary: $asc_yellow;
 $tertiary: $asc_orange;
-$light: $asc_light_gray;
+$light: #fff;
 $dark: $asc_dark_gray;
 
 // Override other defaults
