--- a/templates/module/cta-landing.twig
+++ b/templates/module/cta-landing.twig
@@ -1,16 +1,16 @@
 <div class="module cta-landing">
-    
-    <img class="mw-100" src="{{TimberImage(module.image).src|resize(1440,960,'left')}}">
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-9 offset-md-3 cta-content">
+        <div class="row cta-band">
+            <div class="col-lg-7 offset-lg-5">
+                <img class="mw-100" src="{{TimberImage(module.image).src|resize(1456,920,'left')}}">
+            </div>
+            <div class="col-md-7 cta-content">
                 <h2>{{module.heading}}</h2>
-                <p>{{module.copy}}</p>
+                <p class="cta-copy">{{module.copy}}</p>
                 {% if module.link %}
-                <a class="btn btn-light" href="{{module.link.url}}" target="{{module.link.target}}">{{module.link.title}}</a>
+                <a class="btn btn-light cta-link" href="{{module.link.url}}" target="{{module.link.target}}">{{module.link.title}}</a>
                 {% endif %}
             </div>
         </div>
-    </div>
+    
 </div>
