--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -1,9 +1,5 @@
 @import "bootstrap";
 
-body {
-    overflow-x: hidden;
-}
-
 /*
 * === SITE ELEMENTS ===
 */
@@ -13,7 +9,7 @@ body {
 */
 
 #google_translate_element {
-    display: none;
+    display: block;
 }
 
 .header h1 {
