Add CSS rules for colors in options page

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -8,6 +8,8 @@
 
 	<body class="{{body_class}}" data-template="base.twig">
 
+	{% include 'partial/colors.twig' %}
+
 	<div id="google_translate_element"></div>
 
 	<script type="text/javascript">
