--- a/templates/footer-tertiary.twig
+++ b/templates/footer-tertiary.twig
@@ -1,7 +1,7 @@
 <div class="footer-tertiary">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 footer-copyright">{{"now"|date('Y')}} {{site.name}}</div>
+            <div class="col-md-6 footer-copyright">&copy; {{"now"|date('Y')}} {{site.name}}. All Rights Reserved.</div>
             <div class="col-md-6 footer-attribution">Design by <a href="http://stpaulmedia.com" target="_blank">Saint Paul Media</a></div>
         </div>
     </div>
