--- a/templates/base.twig
+++ b/templates/base.twig
@@ -33,13 +33,9 @@
 
 				<header class="header" role="banner">
 					{% block header %}
-						<nav role="navigation" class="header-menu header-menu-secondary">
-							{% include 'menu.twig' with {'menu': header_secondary.get_items, 'search': true} %}
-						</nav>
-						<div class="container">
-							<div class="row">
-								<div class="col-md-3">
-									<h1 role="banner">
+						<div class="row">
+							<div class="col-md-3">
+								<h1 role="banner" style="padding-left: 20px;">
 										<a href="{{site.url}}" rel="home" title="{{site.name}}">
 											{% if options.header_logo %}
 												{% set logo = TimberImage(options.header_logo) %}
@@ -49,14 +45,24 @@
 											{% endif %}
 										</a>
 									</h1>
+							</div>
+							<div class="col-md-9">
+								<div class="row">
+									<div class="col-12">
+										<nav role="navigation" class="header-menu header-menu-secondary">
+											{% include 'menu.twig' with {'menu': header_secondary.get_items, 'search': true} %}
+										</nav>
+									</div>
 								</div>
-								<div class="col-md-9">
-									
-									<nav role="navigation" class="header-menu header-menu-primary">
-										{% include 'menu.twig' with {'menu': header_primary.get_items} %}
-									</nav>
+								<div class="row">
+									<div class="col-md-9 offset-md-3">
+										<nav role="navigation" class="header-menu header-menu-primary">
+											{% include 'menu.twig' with {'menu': header_primary.get_items} %}
+										</nav>
+									</div>
 								</div>
 							</div>
+						</div>
 					{% endblock %}
 				</header>
 
