Add tax ID to footer for testing

--- a/templates/footer-primary.twig
+++ b/templates/footer-primary.twig
@@ -48,6 +48,8 @@
                     <li class="footer-contact-social"><a href="{{channel.url}}" target="_blank">{{channel.copy}}</a></li>
                     {% endfor %}
                 {% endif %}
+
+                <li>Tax ID Number: 123-45-6789</li>
             </ul>
         </div>
     </div>
