--- a/templates/sidebar-module/categories.twig
+++ b/templates/sidebar-module/categories.twig
@@ -2,7 +2,7 @@
     <h3>News Categories</h3>
     <ul>
         {% for category in categories %}
-        <li><a href="{{category.link}}">{{category.name}}</a></li>
+        <li class="cat-{{category.slug}}"><a href="{{category.link}}">{{category.name}}</a></li>
         {% endfor %}
     </ul>
 </div>
