Be more specific about current page

--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -376,7 +376,7 @@
     color: inherit;
 }
 
-.current-menu-item, .current-page-ancestor {
+.header-menu-primary .current-menu-item, .header-menu-primary .current-page-ancestor {
     color: $primary;
 }
 
