--- a/templates/partial/colors.twig
+++ b/templates/partial/colors.twig
@@ -4,7 +4,7 @@
             border-color: {{options.color_primary}} !important;
         }
 
-        .categories, .cta-landing .cta-link, .current-menu-item, .current-page-ancestor, .footer-contact-social a:before, .hero h1, li.search, .special, .staff .contact a {
+        .categories, .cta-landing .cta-link, .header-menu-primary .current-menu-item, .header-menu-primary .current-page-ancestor, .footer-contact-social a:before, .hero h1, li.search, .special, .staff .contact a {
             color: {{options.color_primary}} !important;
         }
 
