--- a/templates/partial/colors.twig
+++ b/templates/partial/colors.twig
@@ -40,7 +40,7 @@
         }
     {% endif %}
 
-    {% if colors.tertiary %}
+    {% if options.color_tertiary %}
         .footer-tertiary, .cta-pair h2, .cta-group h2, .overview-secondary h2.h2-2 {
             border-color: {{colors.tertiary}} !important;
         }
