Apply Bootstrap styles to Gravity Forms

--- a/templates/partial/colors.twig
+++ b/templates/partial/colors.twig
@@ -15,7 +15,7 @@
             color: {{colors.primary}} !important;
         }
 
-        .cta-landing .cta-content, .footer-tertiary, .header-menu-secondary ul, .highlight, .title-band, .btn-primary {
+        .cta-landing .cta-content, .footer-tertiary, .header-menu-secondary ul, .highlight, .title-band, .btn-primary, .gform_button {
             background: {{colors.primary}} !important;
         }
     {% endif %}
