--- a/src/scss/_bootstrap.scss
+++ b/src/scss/_bootstrap.scss
@@ -27,11 +27,18 @@ $body-color: $dark;
 $link-hover-decoration: none;
 $paragraph-margin-bottom: 1.5rem;
 $font-family-sans-serif: 'Roboto', sans-serif;
+
 $btn-padding-y: 12px;
 $btn-padding-x: 25px;
 $btn-font-size: 1rem;
 $btn-line-height: 1.2;
 $btn-border-width: 0;
 $btn-font-weight: bold;
+
+$input-btn-focus-color: $asc_light_gray !important;
+
+$input-color: $dark;
+$input-border-color: $asc_light_gray;
+$input-focus-border-color: $asc_gray;
 
 @import "node_modules/bootstrap/scss/bootstrap";
