Correct color/weight for in-text links

--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -261,6 +261,9 @@
 .main {
     margin-bottom: 40px;
 }
+.main p a {
+    font-weight: bold;
+}
 @media (min-width: 768px) {
     .title-band {
         margin-bottom: 40px;
