--- a/templates/partial/colors.twig
+++ b/templates/partial/colors.twig
@@ -11,7 +11,7 @@
             border-color: {{colors.primary}} !important;
         }
 
-        .categories, .cta-landing .cta-link, .header-menu-primary .current-menu-item, .header-menu-primary .current-page-ancestor, .footer-contact-social a:before, .hero h1, li.search, .special, .staff .contact a, .main p a {
+        .categories, .cta-landing .cta-link, .header-menu-primary .current-menu-item, .header-menu-primary .current-page-ancestor, .footer-contact-social a:before, .hero h1, li.search, .special, .staff .contact a:link, .main p a:link {
             color: {{colors.primary}} !important;
         }
 
