--- a/templates/module/overview-about.twig
+++ b/templates/module/overview-about.twig
@@ -1,22 +1,35 @@
 <div class="module overview">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 col-lg-6 overview-primary">
-                <h1>{{module.primary.heading}}</h1>
-                {{module.primary.copy}}
+            <div class="col-lg-6 overview-primary">
+                {% if module.primary.heading %}
+                    <h1>{{module.primary.heading}}</h1>
+                {% endif %}
+
+                {% if module.primary.copy %}
+                    {{module.primary.copy}}
+                {% endif %}
+
                 {% set buttons = module.primary.buttons %}
                 {% if buttons %}
                     {% include 'partial/buttons.twig' %}
                 {% endif %}
             </div>
-            <div class="col-md-12 col-lg-5 offset-lg-1 overview-secondary">
+            <div class="col-lg-5 offset-lg-1 overview-secondary">
                 <div class="row">
-                    {% for blurb in module.secondary.blurbs %}
-                        <div class="col-md-6">
-                        <h2 class="h2-{{loop.index}}">{{blurb.heading}}</h2>
-                        {{blurb.copy}}
-                        </div>
-                    {% endfor %}
+                    {% if module.secondary.blurbs %}
+                        {% for blurb in module.secondary.blurbs %}
+                            <div class="col-md-6 col-lg-12 blurb">
+                                {% if blurb.heading %}
+                                    <h2 class="h2-{{loop.index}}">{{blurb.heading}}</h2>
+                                {% endif %}
+
+                                {% if blurb.copy %}
+                                    {{blurb.copy}}
+                                {% endif %}
+                            </div>
+                        {% endfor %}
+                    {% endif %}
                 </div>
             </div>
         </div>
