--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -1168,6 +1168,21 @@ h2.post-title {
 .text, .text-landing h2 {
     border-left-color: $secondary;
 }
+
+.text, .text-landing h3 {
+    font-size: 1.3125rem;
+    font-weight: bold;
+    line-height: 1.2;
+    margin-bottom: 5px;
+}
+
+.text, .text-landing h4 {
+    font-size: 1.125rem;
+    font-weight: bold;
+    line-height: 1.2;
+    margin-bottom: 5px;
+}
+
 @media (min-width: 992px) {
     .text-copy {
         width: 50%;
