Main content OL/UL adjustments

--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -263,6 +263,10 @@
 .main p a {
     font-weight: bold;
 }
+.main p + ol, .main p + ol {
+    margin-top: -1.5rem;
+    margin-bottom: 1.5rem;
+}
 @media (min-width: 768px) {
     .title-band {
         margin-bottom: 40px;
