--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -263,7 +263,7 @@
 .main p a {
     font-weight: bold;
 }
-.main p + ol, .main p + ol {
+.main p + ol, .main p + ul {
     margin-top: -1.5rem;
     margin-bottom: 1.5rem;
 }
