--- a/templates/custom-homilies.twig
+++ b/templates/custom-homilies.twig
@@ -8,12 +8,10 @@
                 {% for post in posts %}
                     <div class="post">
                         <h3 class="post-title"><a href="{{post.link}}">{{post.name}}</a></h3>
+                        <p class="post-preview">{{post.preview.length(20).read_more('')}}</p>
+                        <a class="special special-right" href="{{post.link}}">Read More</a>
                     </div>
                 {% endfor %}
-
-                {% if posts.pagination.prev or posts.pagination.next %}
-			        {% include 'partial/pagination.twig' %}
-			    {% endif %}
             </div>
 
             <div class="col-lg-3 offset-lg-1 sidebar-sidebar">
