--- a/templates/custom-podcast.twig
+++ b/templates/custom-podcast.twig
@@ -5,15 +5,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 sidebar-content">
-                {% for episode in posts %}
+                {% for post in posts %}
                     <div class="post">
-                        <h3 class="post-title"><a href="{{episode.link}}">{{episode.name}}</a></h3>
+                        <h3 class="post-title"><a href="{{post.link}}">{{post.name}}</a></h3>
+                        <a class="special special-right" href="{{post.link}}">Listen</a>
                     </div>
                 {% endfor %}
-
-                {% if posts.pagination.prev or posts.pagination.next %}
-			        {% include 'partial/pagination.twig' %}
-			    {% endif %}
             </div>
 
             <div class="col-lg-3 offset-lg-1 sidebar-sidebar">
