--- a/templates/footer-primary.twig
+++ b/templates/footer-primary.twig
@@ -1,5 +1,6 @@
 <div class="row footer-primary">
-    <div class="col-10 offset-1 col-md-4 offset-md-0">
+    <!-- Address -->
+    <div class="col-10 offset-1 col-md-4 offset-md-0 col-lg-3">
         <div class="footer-primary-content footer-contact">
             <ul>
 
@@ -48,19 +49,45 @@
                     <li class="footer-contact-social"><a href="{{channel.url}}" target="_blank">{{channel.copy}}</a></li>
                     {% endfor %}
                 {% endif %}
-
-                <li>Tax ID Number: 123-45-6789</li>
             </ul>
         </div>
     </div>
-    <div class="col-10 offset-1 col-md-4 offset-md-0">
+    <!-- Menu -->
+    <div class="col-10 offset-1 col-md-4 offset-md-0 col-lg-3">
         <div class="footer-primary-content footer-primary-menu">
             {% include 'menu.twig' with {'menu': footer_primary.get_items,} %}
         </div>
     </div>
-    <div class="col-10 offset-1 col-md-4 offset-md-0">
+    <!-- Extra Menu -->
+    <div class="col-10 offset-1 col-md-4 offset-md-0 col-lg-3">
         <div class="footer-primary-content footer-secondary-menu">
             {% include 'menu.twig' with {'menu': footer_secondary.get_items,} %}
         </div>
     </div>
+
+        <!-- Newsletter -->
+        <div class="col-10 offset-1 col-md-6 offset-md-0 col-lg-3">
+            <div class="footer-primary-content footer-newsletter">
+                <h4>Sign Up for Our Newsletter</h4>
+                {% filter shortcodes %}
+                [gravityform id={{newsletter}} title=false description=false]
+                {% endfilter %}
+            </div>
+        </div>
+        <!-- Logo -->
+        <div class="col-10 offset-1 col-md-5 offset-md-1 col-lg-3 offset-lg-9">
+            <div class="footer-logo">
+                {% if options.header_logo or options.footer_logo %}
+                
+                    {% if options.footer_logo %}
+                        {% set logo = TimberImage(options.footer_logo) %}
+                    {% else %}
+                        {% set logo = TimberImage(options.header_logo) %} 
+                    {% endif %}
+
+                    <a href="{{site.link}}"><img src="{{logo.src}}" alt="{{logo.alt}}"></a>
+
+                {% endif %}
+            </div>
+        </div>
 </div>
