Footer menu test

--- a/templates/footer-primary.twig
+++ b/templates/footer-primary.twig
@@ -59,14 +59,16 @@
         </div>
     </div>
     <!-- Extra Menu -->
-    <div class="col-10 offset-1 col-md-4 offset-md-0 col-lg-3">
-        <div class="footer-primary-content footer-secondary-menu">
-            {% include 'menu.twig' with {'menu': footer_secondary.get_items,} %}
+    {% if footer_secondary %}
+        <div class="col-10 offset-1 col-md-4 offset-md-0 col-lg-3">
+            <div class="footer-primary-content footer-secondary-menu">
+                {% include 'menu.twig' with {'menu': footer_secondary.get_items,} %}
+            </div>
         </div>
-    </div>
+    {% endif %}
 
         <!-- Newsletter -->
-        <div class="col-10 offset-1 col-md-6 offset-md-0 col-lg-3">
+        <div class="col-10 offset-1 col-md-6 offset-md-0 {{footer_secondary ? 'col-lg-3' : 'col-lg-3 offset-lg-3' }}">
             <div class="footer-primary-content footer-newsletter">
                 <h4>Sign Up for Our Newsletter</h4>
                 {% filter shortcodes %}
