Footer menu test 2

--- a/templates/footer-primary.twig
+++ b/templates/footer-primary.twig
@@ -59,7 +59,7 @@
         </div>
     </div>
     <!-- Extra Menu -->
-    {% if footer_secondary %}
+    {% if footer_secondary.get_items %}
         <div class="col-10 offset-1 col-md-4 offset-md-0 col-lg-3">
             <div class="footer-primary-content footer-secondary-menu">
                 {% include 'menu.twig' with {'menu': footer_secondary.get_items,} %}
@@ -68,7 +68,7 @@
     {% endif %}
 
         <!-- Newsletter -->
-        <div class="col-10 offset-1 col-md-6 offset-md-0 {{footer_secondary ? 'col-lg-3' : 'col-lg-3 offset-lg-3' }}">
+        <div class="col-10 offset-1 col-md-6 offset-md-0 {{footer_secondary.get_items ? 'col-lg-3' : 'col-lg-3 offset-lg-3' }}">
             <div class="footer-primary-content footer-newsletter">
                 <h4>Sign Up for Our Newsletter</h4>
                 {% filter shortcodes %}
