--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -270,7 +270,7 @@
 .main p a {
     font-weight: bold;
 }
-.main p + ol, .main p + ul {
+.sidebar-content p + ol, .sidebar-content p + ul {
     margin-top: -1.5rem;
     margin-bottom: 1.5rem;
 }
