Use Bootstrap for mobile menu

--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -14,6 +14,12 @@
     display: none;
 }
 
+.header .navbar-brand img {
+    display: inline-block;
+    height: auto;
+    width: 300px;
+}
+
 .header h1 {
     padding: 20px 0;
 }
@@ -361,6 +367,10 @@
 /*
 * === CLASSES ===
 */
+
+.pagination {
+    margin-top: 30px;
+}
 
 .buttons {
     list-style: none;
