--- a/templates/partial/pagination.twig
+++ b/templates/partial/pagination.twig
@@ -1,4 +1,4 @@
-<div class="row module">
+<div class="row module pagination">
     {% if posts.pagination.prev %}
     <div class="col-md">
         <a href="{{posts.pagination.prev.link}}" class="prev {{posts.pagination.prev.link|length ? '' : 'invisible'}} special special-left">Previous</a>
