--- a/templates/base.twig
+++ b/templates/base.twig
@@ -29,47 +29,55 @@
 	</div>
 	{% endif %}
 
-			
-
 				<header class="header" role="banner">
 					{% block header %}
-						<div class="row">
-							<div class="col-md-3">
-								<h1 role="banner" style="padding-left: 20px;">
-										<a href="{{site.url}}" rel="home" title="{{site.name}}">
-											{% if options.header_logo %}
-												{% set logo = TimberImage(options.header_logo) %}
-												<img src="{{logo.src}}" alt="{{logo.alt}}">
-											{% else %}
-												{{site.name}}
-											{% endif %}
-										</a>
-									</h1>
-							</div>
-							<div class="col-md-9">
-								<div class="row">
-									<div class="col-12">
-										<nav role="navigation" class="header-menu header-menu-secondary">
-											{% include 'menu.twig' with {'menu': header_secondary.get_items, 'search': true} %}
-										</nav>
-									</div>
+						<nav class="navbar navbar-expand-lg navbar-light">
+
+							<div class="container-fluid">
+
+								{% set logo = TimberImage(options.header_logo) %} 
+								<a class="navbar-brand" href="{{site.url}}" rel="home" title="{{site.title}}">
+									<img alt="{{logo.alt}}" src="{{logo.src}}">
+								</a>
+
+								<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+									<span class="navbar-toggler-icon"></span>
+								</button>
+
+								<div class="collapse navbar-collapse flex-column align-items-start" id="navbar">
+									<ul class="navbar-nav ml-auto header-nav-secondary">
+										<li class="nav-item">
+											<form class="form-inline" action="{{site.url}}" id="searchform" method="get" role="search"  >
+												<input class="form-control form-control-sm" placeholder="Search..." type="text" value="" name="s" id="s" aria-label="Search">
+											</form>
+
+
+											
+
+
+										</li>
+
+										{% for item in header_secondary.get_items %}
+										<li class="nav-item">
+											<a class="nav-link" href="{{item.link}}" target="{{item.target}}">{{item.name}}</a>
+										</li>
+										{% endfor %}
+									</ul>
+
+									<ul class="navbar-nav ml-auto">
+										{% for item in header_primary.get_items %}
+										<li class="nav-item">
+											<a class="nav-link" href="{{item.link}}" target="{{item.target}}">{{item.name}}</a>
+										</li>
+										{% endfor %}
+									</ul>
 								</div>
-								<div class="row">
-									<div class="col-md-9 offset-md-3">
-										<nav role="navigation" class="header-menu header-menu-primary">
-											{% include 'menu.twig' with {'menu': header_primary.get_items} %}
-										</nav>
-									</div>
-								</div>
 							</div>
-						</div>
+
+						</nav>
 					{% endblock %}
 				</header>
 
-			
-
-			
-				
 				<main class="main" role="main">
 					{% if menu_items %}
 					<div class="sub-menu">
