--- a/templates/base.twig
+++ b/templates/base.twig
@@ -31,13 +31,12 @@
 
 				<header class="header" role="banner">
 					{% block header %}
-						<nav class="navbar navbar-expand-lg navbar-light">
-
-							<div class="container-fluid">
+						<nav class="navbar navbar-expand-lg navbar-light py-0 my-0">
+							<div class="container">
 
 								{% set logo = TimberImage(options.header_logo) %} 
 								<a class="navbar-brand" href="{{site.url}}" rel="home" title="{{site.title}}">
-									<img alt="{{logo.alt}}" src="{{logo.src}}">
+									<img alt="{{logo.alt}}" src="{{logo.src}}" class="my-3">
 								</a>
 
 								<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,26 +44,21 @@
 								</button>
 
 								<div class="collapse navbar-collapse flex-column align-items-start" id="navbar">
-									<ul class="navbar-nav ml-auto header-nav-secondary">
+									<ul class="navbar-nav navbar-secondary ml-auto">
 										<li class="nav-item">
 											<form class="form-inline" action="{{site.url}}" id="searchform" method="get" role="search"  >
 												<input class="form-control form-control-sm" placeholder="Search..." type="text" value="" name="s" id="s" aria-label="Search">
 											</form>
-
-
-											
-
-
 										</li>
 
 										{% for item in header_secondary.get_items %}
-										<li class="nav-item">
-											<a class="nav-link" href="{{item.link}}" target="{{item.target}}">{{item.name}}</a>
-										</li>
+											<li class="nav-item">
+												<a class="nav-link" href="{{item.link}}" target="{{item.target}}">{{item.name}}</a>
+											</li>
 										{% endfor %}
 									</ul>
 
-									<ul class="navbar-nav ml-auto">
+									<ul class="navbar-nav navbar-primary ml-auto">
 										{% for item in header_primary.get_items %}
 										<li class="nav-item">
 											<a class="nav-link" href="{{item.link}}" target="{{item.target}}">{{item.name}}</a>
@@ -72,8 +66,8 @@
 										{% endfor %}
 									</ul>
 								</div>
+							
 							</div>
-
 						</nav>
 					{% endblock %}
 				</header>
