--- a/templates/base.twig
+++ b/templates/base.twig
@@ -31,7 +31,7 @@
 
 				<header class="header" role="banner">
 					{% block header %}
-						<nav class="navbar navbar-expand-lg navbar-light py-0 my-0">
+						<nav class="navbar navbar-expand-lg py-0 my-0">
 							<div class="container">
 
 								{% set logo = TimberImage(options.header_logo) %} 
