Header navbar primary item classes

--- a/templates/partial/colors.twig
+++ b/templates/partial/colors.twig
@@ -18,7 +18,7 @@
 
         .special:link, .special:visited, .main p a:link, .main p a:visited, .contact a:link, .contact a:visited { color: {{colors.primary}} !important; }
 
-        .navbar-primary a:active, .navbar-primary a:hover {
+        .navbar-primary a:active, .navbar-primary a:hover, .navbar-primary .current-menu-item, .navbar-primary .current-page-ancestor {
             color: {{colors.primary}} !important;
         }
 
